Fix alignment of brand in navbar

--- a/app/assets/stylesheets/_bootstrap-styles.scss
+++ b/app/assets/stylesheets/_bootstrap-styles.scss
@@ -19,7 +19,7 @@ th.attribute_group, th.calculation_group {
 }
 
 .navbar a.brand {
-  padding-top: 11px;
+  padding-top: 9px;
   font-size: 16px;
   font-weight: 400;
 }
